advance with form

--- a/denogram/src/index.scss
+++ b/denogram/src/index.scss
@@ -7,9 +7,18 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: $background;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.ui.form {
+  .btn-submit {
+    width: 100%;
+    background-color: $principal;
+    color: white;
+  }
 }
